--- a/04-Bicycle/imoocmanager/src/components/Header/index.less
+++ b/04-Bicycle/imoocmanager/src/components/Header/index.less
@@ -1,5 +1,7 @@
-.header {
+@import "./../../style/default";
 
+.header {
+  background-color: @colorM;
   .header-top {
     height: 60px;
     line-height: 60px;
