--- a/04-Bicycle/imoocmanager/src/style/common.less
+++ b/04-Bicycle/imoocmanager/src/style/common.less
@@ -1,3 +1,4 @@
+@import "default";
 
 .container {
 
@@ -9,6 +10,8 @@
 
   .main {
     height: calc(100vh);
+    background-color: @colorL;
+    overflow: auto;
   }
 
   .content {
