--- a/04-Bicycle/imoocmanager/src/components/Header/index.less
+++ b/04-Bicycle/imoocmanager/src/components/Header/index.less
@@ -21,6 +21,16 @@
 
     .breadcrumb-title {
       text-align: center;
+      font-size: @fontC;
+      &:after{
+        position: absolute;
+        content: '';
+        left: 85px;
+        top: 39px;
+        border-top: 9px solid @colorM;
+        border-left: 12px solid transparent;
+        border-right: 12px solid transparent;
+      }
     }
 
     .weather {
