--- a/04-Bicycle/imoocmanager/src/components/Header/index.less
+++ b/04-Bicycle/imoocmanager/src/components/Header/index.less
@@ -39,6 +39,22 @@
       .date {
         margin-right: 10px;
       }
+
+      .week {
+        margin-right: 10px;
+      }
+
+      .temperature {
+        margin-right: 10px;
+      }
+
+      .weather-icon {
+        margin-right: 10px;
+      }
+
+      .weather-detail {
+        margin-right: 10px;
+      }
     }
   }
 }
