--- a/04-Bicycle/imoocmanager/src/style/common.less
+++ b/04-Bicycle/imoocmanager/src/style/common.less
@@ -3,7 +3,7 @@
 .container {
 
   .nav-left {
-    background-color: #001529;
+    background-color: @colorR;
     color: #ffffff;
     height: calc(100vh);
   }
