--- a/04-Bicycle/imoocmanager/src/components/Header/index.less
+++ b/04-Bicycle/imoocmanager/src/components/Header/index.less
@@ -17,7 +17,7 @@
     height: 40px;
     line-height: 40px;
     padding: 0 20px;
-    border-top: 1px solid #f9c700;
+    border-top: 1px solid @colorA;
 
     .breadcrumb-title {
       text-align: center;
