--- a/04-Bicycle/imoocmanager/src/components/NavLeft/index.less
+++ b/04-Bicycle/imoocmanager/src/components/NavLeft/index.less
@@ -1,7 +1,9 @@
+@import "./../../style/default";
+
 .logo {
   line-height: 90px;
   padding-left: 20px;
-  background-color: #002140;
+  background-color: @colorS;
 
   img {
     height: 35px;
