--- a/04-Bicycle/imoocmanager/src/style/common.less
+++ b/04-Bicycle/imoocmanager/src/style/common.less
@@ -1,4 +1,20 @@
 @import "default";
+@import "loading";
+
+// 清除li 标签前面的点点
+ul, li {
+  list-style: none;
+}
+
+// 清除左右浮动
+.clearfix {
+  &::after {
+    content: " ";
+    clear: both;
+    display: block;
+    visibility: hidden;
+  }
+}
 
 .container {
 
@@ -17,5 +33,20 @@
   .content {
     position: relative;
     padding: 20px;
+  }
+}
+
+.content-wrap{
+  background: #ffffff;
+  border: 1px solid #e8e8e8;
+  margin-top: -3px;
+  .ant-table-wrapper{
+    margin-left: -1px;
+    margin-right: -2px;
+  }
+}
+.ant-card{
+  button{
+    margin-right: 10px;
   }
 }
